bro i just updated